--- a/.config/sway/config
+++ b/.config/sway/config
@@ -172,6 +172,6 @@ workspace 1 output DP-2
 workspace 2 output DP-1
 workspace 3 output DP-1
 workspace 4 output DP-1
-for_window [class="qutebrowser"] move container to workspace 1
+for_window [app_id="org.qutebrowser.qutebrowser"] move container to workspace 1
 for_window [class="Spotify"] move container to workspace 4
 for_window [class="Steam"] move container to workspace 1
