--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -98,19 +98,19 @@ scrolling:
 font:
   # Normal (roman) font face
   normal:
-    family: "JetBrains Mono"
+    family: "Codelia"
     # The `style` can be specified to pick a specific face.
     style: Regular
 
   # Bold font face
   bold:
-    family: "JetBrains Mono"
+    family: "Codelia"
     # The `style` can be specified to pick a specific face.
     style: Bold
 
   # Italic font face
   italic:
-    family: "JetBrains Mono"
+    family: "Codelia"
     # The `style` can be specified to pick a specific face.
     style: Italic
 
@@ -161,46 +161,46 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x030D0D'
-    foreground: '0xC1B7B7'
+    background: '0x16161F'
+    foreground: '0xC0CAF5'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x000000'
-    cursor: '0xffffff'
+    text: '0x787C99'
+    cursor: '0xA9B1D6'
 
   # Normal colors
   normal:
-    black:   '0x082626'
-    red:     '0xCC6690'
-    green:   '0x62C68F'
-    yellow:  '0xEDBC77'
-    blue:    '0x146666'
-    magenta: '0x7C78C1'
-    cyan:    '0x60A6A6'
-    white:   '0xC1B7B7'
+    black:   '0x363B54'
+    red:     '0xFF5370'
+    green:   '0x1ABC9C'
+    yellow:  '0xFFDB69'
+    blue:    '0x7AA2F7'
+    magenta: '0x9D7CD8'
+    cyan:    '0x9ABDF5'
+    white:   '0xC0CAF5'
 
   # Bright colors
   bright:
-    black:   '0x082626'
-    red:     '0xCC6690'
-    green:   '0x62C68F'
-    yellow:  '0xEDBC77'
-    blue:    '0x146666'
-    magenta: '0x7C78C1'
-    cyan:    '0x60A6A6'
-    white:   '0xC1B7B7'
+    black:   '0x363B54'
+    red:     '0xFF5370'
+    green:   '0x1ABC9C'
+    yellow:  '0xFFDB69'
+    blue:    '0x7AA2F7'
+    magenta: '0x9D7CD8'
+    cyan:    '0x9ABDF5'
+    white:   '0xC0CAF5'
 
   # Dim colors (Optional)
   dim:
-    black:   '0x082626'
-    red:     '0xCC6690'
-    green:   '0x62C68F'
-    yellow:  '0xEDBC77'
-    blue:    '0x146666'
-    magenta: '0x7C78C1'
-    cyan:    '0x60A6A6'
-    white:   '0xC1B7B7'
+    black:   '0x363B54'
+    red:     '0xFF5370'
+    green:   '0x1ABC9C'
+    yellow:  '0xFFDB69'
+    blue:    '0x7AA2F7'
+    magenta: '0x9ABDF5'
+    cyan:    '0x0DB9D7'
+    white:   '0xC0CAF5'
 
 # Bell
 #
