--- a/.config/sway/config
+++ b/.config/sway/config
@@ -57,15 +57,15 @@ bindsym $mod+Shift+q exit
 bindsym $mod+Alt+l exec swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill
 bindsym $mod+p exec grim ~/Pictures/$(date +%Y%m%d%H%M%S).png
 bindsym $mod+Alt+p exec grim -g "$(slurp)" ~/Pictures/$(date +%Y%m%d%H%M%S).png
-bindsym $mod+d exec bemenu-run -i -w -n 1 -l 10 -p run -H 25 --fn "JetBrains Mono" \
-		--tb=#082626 \
-		--tf=#60A6A6 \
-		--fb=#030D0D \
-		--ff=#C1B7B7 \
-		--nb=#030D0D \
-		--nf=#C1B7B7 \
-		--hb=#082626 \
-		--hf=#60A6A6
+bindsym $mod+d exec bemenu-run -i -w -n 1 -l 10 -p run -H 25 --fn "Codelia" \
+		--tb=#1A1B27 \
+		--tf=#7AA2F7 \
+		--fb=#16161F \
+		--ff=#7AA2F7 \
+		--nb=#16161F \
+		--nf=#7AA2F7 \
+		--hb=#363B54 \
+		--hf=#7AA2F7
 
 # Move the foucts
 bindsym $mod+$left focus left
@@ -162,10 +162,10 @@ smart_gaps	off
 focus_follows_mouse	no
 
 # Colors
-client.focused				#082626 #082626 #60A6A6 #030D0D #082626
-client.focused_inactive		#030D0D #030D0D #60A6A6 #030D0D #030D0D
-client.unfocused			#030D0D #030D0D #60A6A6 #030D0D #030D0D
-client.urgent				#CC6690 #CC6690 #60A6A6 #030D0D #CC6690
+client.focused				#082626 #1A1B27 #C0CAF5 #16161F #363B54
+client.focused_inactive			#16161F #16161F #C0CAF5 #16161F #16161F
+client.unfocused			#16161F #16161F #C0CAF5 #16161F #16161F
+client.urgent				#F7768E #F7768E #C0CAF5 #16161F #F7768E
 
 # Criteria
 workspace 1 output DP-2
