--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,14 +18,14 @@ set $lockscreen swaylock --color 333333
 #
 # Exec on startup
 #
-exec_always xrdb $HOME/.config/resources/.Xresources
-exec_always mako
+# exec_always xrdb $HOME/.config/resources/.Xresources
 exec_always kanshi
 
-exec wlsunset -l 45.4624 -L 9.1293 -t 4000 -T 6500
+exec mako
 exec waybar
 exec sleep 2 && megasync
 exec solaar -w hide
+exec wlsunset -l 45.4624 -L 9.1293 -t 4000 -T 6500
 exec swayidle \
 	timeout 300 'swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill' \
 	timeout 600 'swaymsg "output * dpms off"' \
