--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -20,9 +20,8 @@ mode.select = "SELECT"
 space = "all"
 tab = "all"
 newline = "none"
-nbsp = "none"
-tabpad = "none"
 
 [editor.whitespace.characters]
 space = "·"
+nbsp = "·"
 tab = "→"
