hypr: changed configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,4 @@
-monitor=DP-1,preferred,1080x450,1
-monitor=DP-2,preferred,0x0,1
-monitor=DP-2,transform,1
+monitor=eDP-1,1920x1080,0x0,1
 
 exec-once = hyprpaper
 exec-once = waybar
@@ -9,7 +7,7 @@ exec-once = swayidle timeout 300 'swaylock --image $HOME/Pictures/.wallpaper/wal
 
 input {
     # kb_file=/home/teo/.config/hypr/usit
-    kb_layout=usit
+    kb_layout=it
     # kb_variant=
     # kb_model=
     # kb_options=
@@ -18,10 +16,10 @@ input {
     follow_mouse=2
 
     touchpad {
-        natural_scroll=no
+        natural_scroll=yes
     }
 
-    sensitivity=-0.5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity=0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -40,7 +38,6 @@ misc {
 
 decoration {
     rounding = 8
-    blur = false
     # blur_size = 10
     # blur_passes = 5
     # blur_new_optimizations = false
