--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
 preload = ~/Pictures/.wallpaper/wallpaper.jpg
-wallpaper = DP-1, ~/Pictures/.wallpaper/wallpaper.jpg
-wallpaper = DP-2, ~/Pictures/.wallpaper/wallpaper.jpg
+wallpaper = eDP-1, ~/Pictures/.wallpaper/wallpaper.jpg
