hypr: changed configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,12 +8,12 @@ exec-once = wlsunset -l 45.4624 -L 9.1293 -t 4000 -T 6500
 exec-once = swayidle timeout 300 'swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 input {
-    kb_file=$HOME/.config/hypr/usit
+    # kb_file=/home/teo/.config/hypr/usit
     kb_layout=usit
-    kb_variant=
-    kb_model=
-    kb_options=
-    kb_rules=
+    # kb_variant=
+    # kb_model=
+    # kb_options=
+    # kb_rules=
 
     follow_mouse=2
 
