Hypr: added binds for special workspace

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -88,6 +88,7 @@ bind=SUPER_SHIFT,SPACE,togglefloating,
 bind=SUPER,D,exec,rofi -show drun
 bind=SUPER,F,fullscreen,
 bind=SUPER_ALT,l,exec,swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill
+bind=SUPER,T,togglegroup
 
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
@@ -103,11 +104,13 @@ bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
 bind=SUPER,4,workspace,4
+bind=SUPER,S,togglespecialworkspace,
 
 bind=SUPER_SHIFT,1,movetoworkspace,1
 bind=SUPER_SHIFT,2,movetoworkspace,2
 bind=SUPER_SHIFT,3,movetoworkspace,3
 bind=SUPER_SHIFT,4,movetoworkspace,4
+bind=SUPER_SHIFT,S,movetoworkspacesilent,special
 
 bind = ,XF86AudioRaiseVolume,exec,amixer sset Master 5%+
 bind = ,XF86AudioLowerVolume,exec,amixer sset Master 5%-
