--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ exec-once = swayidle timeout 300 'swaylock --image $HOME/Pictures/.wallpaper/wal
 
 input {
     # kb_file=/home/teo/.config/hypr/usit
-    kb_layout=usit
+    kb_layout=it
     # kb_variant=
     # kb_model=
     # kb_options=
@@ -57,6 +57,17 @@ decoration {
     dim_inactive = true
     dim_strength = 0.2
     # dim_around = 0.0
+
+    blur {
+        enabled = true
+        passes = 5
+        size = 1
+        noise = 0
+        contrast = 1
+        brightness = 1
+        special = true
+        new_optimizations = true
+    }
 }
 
 animations {
