--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,10 +2,13 @@ monitor=DP-1,preferred,1080x450,1
 monitor=DP-2,preferred,0x0,1
 monitor=DP-2,transform,1
 
+env = WLR_NO_HARDWARE_CURSORS,1
+
+exec-once = hypridle
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = wlsunset -l 45.4624 -L 9.1293 -t 4000 -T 6500
-exec-once = swayidle timeout 300 'swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill' timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+
 
 input {
     # kb_file=/home/teo/.config/hypr/usit
@@ -21,17 +24,16 @@ input {
         natural_scroll=no
     }
 
-    sensitivity=-0.5 # -1.0 - 1.0, 0 means no modification.
+    sensitivity=0 # -1.0 - 1.0, 0 means no modification.
+    accel_profile=flat
 }
 
 general {
     gaps_in=5
     gaps_out=20
-    border_size=2
+    border_size=0
     col.active_border=0x00000000
     col.inactive_border=0x00000000
-
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
 misc {
@@ -43,26 +45,29 @@ decoration {
     # blur_size = 10
     # blur_passes = 5
     # blur_new_optimizations = false
-    multisample_edges = true
+    # multisample_edges = true
 
-    drop_shadow = true
-    shadow_range = 30
-    shadow_offset = 0 0
-    shadow_render_power = 50
-    shadow_ignore_window = true
-    col.shadow = 0x60101010
-    col.shadow_inactive = 0x40101010
-    # active_opacity = 1.0
-    # inactive_opacity = 0.7
     dim_inactive = true
     dim_strength = 0.2
     # dim_around = 0.0
 
+    shadow {
+        enabled = true
+        range = 30
+        render_power = 3
+        sharp = false
+        ignore_window = true
+        color = 0x60101010
+        color_inactive = 0x40101010
+        offset = 0 0
+        scale = 1.0
+    }
+
     blur {
         enabled = true
-        passes = 5
-        size = 1
-        noise = 0
+        passes = 3
+        size = 3
+        noise = 0.02
         contrast = 1
         brightness = 1
         special = true
@@ -80,7 +85,7 @@ animations {
 }
 
 master {
-    new_is_master = false
+    new_status = master
 }
 
 gestures {
@@ -98,8 +103,10 @@ bind=SUPER_SHIFT,Q,exit,
 bind=SUPER_SHIFT,SPACE,togglefloating,
 bind=SUPER,D,exec,rofi -show drun
 bind=SUPER,F,fullscreen,
-bind=SUPER_ALT,l,exec,swaylock --image $HOME/Pictures/.wallpaper/wallpaper-locked.jpg --scaling fill
+bind=SUPER_ALT,l,exec,hyprlock
 bind=SUPER,T,togglegroup
+bind=SUPER,P,exec,grim ~/Pictures/$(date +%Y%m%d%H%M%S).png
+bind=SUPER_ALT,P,exec,grim -g "$(slurp)" ~/Pictures/$(date +%Y%m%d%H%M%S).png
 
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
@@ -130,7 +137,9 @@ bind = ,XF86AudioStop,exec,mpc stop
 bind = ,XF86AudioNext,exec,mpc next
 bind = ,XF86AudioPrev,exec,mpc prev
 
-workspace=DP-2,1
-workspace=DP-1,2
-workspace=DP-1,3
-workspace=DP-1,4
+workspace=1,monitor:DP-2
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
+workspace=4,monitor:DP-1
+
+workspace=name:special:special,gapsout:75,gapsin:20,shadow:false
