--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -25,3 +25,15 @@ newline = "none"
 space = "·"
 nbsp = "·"
 tab = "→"
+
+[keys.normal]
+"A-," = "goto_previous_buffer"
+"A-." = "goto_next_buffer"
+"A-/" = "repeat_last_motion"
+A-w = ":buffer-close"
+A-x = "extend_to_line_bounds"
+X = ["extend_line_up", "extend_to_line_bounds"]
+
+[keys.select]
+A-x = "extend_to_line_bounds"
+X = ["extend_line_up", "extend_to_line_bounds"]
